Update Base Entity